--- a/TODO
+++ b/TODO
@@ -1,11 +1,8 @@
- * Get AS5047 SPI sampling to be faster
- * control cycle sometimes jitters so that two cycles happen
-   immediately back to back
-
- * Reduce turnaround time from 140us to something smaller
+ * Design actual non-asio API
 
  * Get frameless rotor and stator
  * Get pre-production gearset
+ * Get pre-production bearings
 
  * Finish designing v2 gearbox
 
@@ -29,6 +26,8 @@
    * Javascript file reader
    * Javascript live + logged analysis tool
 
+ * C++ moteus tool
+   * Implement calibration
 
  * BE8108 gearbox v2
    * Make planet input on pocket NC
@@ -106,12 +105,29 @@ Code cleanup
  * Try to figure out a way so that we can actually bind callbacks without
    having to shrink all over the place?
 
+DONE 2019-09-12
+ * Got C++ moteus_tool flashing things
+
+DONE 2019-09-10
+ * Bearing selection
+ * Got basic non-asio client working
+ * Redesigned register protocol to remove an extra byte from
+   everything that does 3 values or less
+ * Started on C++ moteus_tool, so that I can actually flash from the rpi
+
 DONE 2019-09-09
  * Sent in PO for gears
  * Got something working with the hardware CRC on the STM32.  It
    required changing the CRC, and w/o DMA still took 64 cycles for a
    26 byte CRC.  So a bit better than the 210cycle boost software one.
    Still, probably not worth re-flashing all the bootloaders for.
+ * Fixed jitter in control cycle
+ * Final turnaround time after all firmware side optimizations of
+   around 80us.  Now the biggest limiter is the rpi3 turnaround time
+   of 120us or so.
+ * Optimize base::error_code to not allocate strings unless
+   necessary... like when a message is appended, or it is asked for
+
 
 DONE 2019-09-08
  * Sent request for updated gear quote
